Impression/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: impression
  labels:
    name: impression
    app: impression-app
