Impression/k8s/k8s-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: impression
  labels:
    name: impression
    app: impression-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impression-deployment
  namespace: impression
  labels:
    app: impression-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: impression-app
  template:
    metadata:
      labels:
        app: impression-app
    spec:
      containers:
        - name: impression-app
          image: walidbenhamid1/impression:latest
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: impression-service
  namespace: impression
spec:
  selector:
    app: impression-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: LoadBalancer
