Impression/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: impression-service
  namespace: impression
spec:
  selector:
    app: impression-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: LoadBalancer
