Impression/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: impression-ingress
  labels:
    app: impression-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: impression.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: impression-service
            port:
              number: 80
